align consuming resource check