@@ -26,6 +26,7 @@ import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 import com.google.auto.value.AutoValue;
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.spotify.styx.WorkflowCache;
 import com.spotify.styx.WorkflowResourceDecorator;
@@ -149,8 +150,11 @@ public final class StateUtil {
    *
    * @return true if the state consumes resources, otherwise false.
    */
-  private static boolean isConsumingResources(RunState.State state) {
-    return !javaslang.collection.List.of(RunState.State.NEW, RunState.State.QUEUED).contains(state);
+  static boolean isConsumingResources(RunState.State state) {
+    return ImmutableList.of(RunState.State.PREPARE,
+        RunState.State.SUBMITTING,
+        RunState.State.SUBMITTED,
+        RunState.State.RUNNING).contains(state);
   }
 
   @AutoValue
